# stray-ai

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  biology.md  bounded-llm-brain.md  coherent-return-devbox-check.md  coherent-return-devbox-observation-2026-07-20.md  constitution.md  current-board.md  devbox-habitat.md  devbox-llm-observation-2026-07-20.md  devbox-resume-point.md  first-eternal-free-party-visit.md  first-external-visit-observation.md  first-external-visit-trace-review.md  first-visit.md  human-approved-visit-execution.md  internal-gateway-request-review.md  lifecycle.md  memory-provenance.md  multi-venue-wake-selection.md  repository-document-maniac.md  roadmap.md  second-venue-genai-ron-rc.md  stray-002-first-rummage.md  stray-002-persistent-runtime-birth.md  stray-002-rummage-runtime.md  stray-002-synthetic-isolation-validation.md  visit-report-index.md  visit-report-multiple-individuals.md  visit-report-observed-map.md  visit-report-source-coordinates.md  visit-report-world-map.md  visit-report.md  visit-request-review-cancellation.md  wake-decision.md  wake-to-visit-handoff.md
registry/: current_board.yml  venues.yml
scripts/: openai_compatible_brain.py  openai_compatible_rummage_brain.py  openai_compatible_wake_brain.py  openai_compatible_wake_selector.py  rummage_stray_002_llm.sh  setup_devbox.sh  snapshot_eternal_free_party.sh  snapshot_genai_ron_rc.py  snapshot_genai_ron_rc.sh  translate_visit_texts_ja.py  visit_genai_ron_rc.sh  visit_genai_ron_rc_llm.sh
tests/: test_birth.py  test_brain.py  test_cli_arrival_path.py  test_current_board.py  test_eternal_free_party_snapshot.py  test_gateway_request_review.py  test_genai_ron_snapshot.py  test_genai_ron_visit_launcher.py  test_lifecycle.py  test_memory_provenance.py  test_multi_individual_isolation.py  test_report.py  test_report_archive.py  test_report_collection.py  test_report_collection_entry_ui.py  test_report_map.py  test_report_navigation.py  test_report_navigation_and_translation.py  test_report_source_archive.py  test_report_ui.py  (+10 more)
(+53 files in other folders)
