[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stray-ai"
version = "0.1.0"
description = "A persistent AI visitor that wanders through bounded places and carries optional traces home."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "openai>=1.0,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "ruff>=0.9,<1"]

[project.scripts]
stray-ai = "stray_ai.cli:main"
stray-ai-report = "stray_ai.report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
